[package]
name = "demo_stm32f4"
version = "0.1.0"
authors = ["Vladimir Kuznetcov <vtoes652@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["stm32f407", "rt"]

[[bin]]
name = "demo_stm32f4"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true